Drizzle Kit Initialised

--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "date-fns": "^3.3.1",
+    "drizzle-orm": "^0.31.0",
     "embla-carousel-react": "^8.0.0-rc22",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
+    "pg": "^8.11.5",
     "react": "^18",
     "react-day-picker": "^8.10.0",
     "react-dom": "^18",
@@ -60,9 +62,12 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/pg": "^8.11.6",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
+    "dotenv": "^16.4.5",
+    "drizzle-kit": "^0.22.1",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "postcss": "^8",
